<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/TitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caviardreams"
            android:text="Login"
            android:textColor="@color/bluelogo"
            android:textSize="50dp" />

        <ScrollView
            android:id="@+id/ScrollViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="300dp"
                            app:srcCompat="@drawable/meetlogox" />

                        <EditText
                            android:id="@+id/LUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/userpassbg_rounded"
                            android:ems="10"
                            android:hint="Username"
                            android:inputType="textPersonName"
                            android:paddingLeft="10dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hint"
                            android:textSize="16dp"
                            app:layout_constraintTop_toBottomOf="@+id/imageView" />

                        <EditText
                            android:id="@+id/LPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/userpassbg_rounded"
                            android:ems="10"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hint"
                            android:textSize="16dp"
                            app:layout_constraintTop_toBottomOf="@+id/LUsername" />

                        <CheckBox
                            android:id="@+id/checkBoxRemember"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Remember Me"/>

                        <Button
                            android:id="@+id/LoginButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/greenbutton"
                            android:fontFamily="sans-serif"
                            android:text="Login"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textFontWeight="400"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/RegisText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/caviardreams"
                            android:text="Register"
                            android:textColor="@color/black"
                            android:textSize="20dp" />
                </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical">
                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>
        </LinearLayout>


</LinearLayout>
