<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/TitleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/caviardreams"
        android:text="Register"
        android:textColor="@color/bluelogo"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/ScrollViewRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/ScrollViewRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TitleRegister">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Constraint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/Constraint2"
                app:srcCompat="@drawable/meetlogox" />

            <EditText
                android:id="@+id/RUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/userpassbg_rounded"
                android:ems="10"
                android:hint="Username"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@id/RPassword"
                app:layout_constraintCircleRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/RPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/userpassbg_rounded"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@id/RegisButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RUsername" />

            <Button
                android:id="@+id/RegisButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/greenbutton"
                android:fontFamily="sans-serif"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@id/LoginText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RPassword" />

            <TextView
                android:id="@+id/LoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/caviardreams"
                android:text="Log In"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@id/RegisStatus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegisButton"
                tools:layout_editor_absoluteX="186dp" />

            <TextView
                android:id="@+id/RegisStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="@id/Constraint2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LoginText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>